--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 version = "0.1.0"
-name = "{{project-name}}"
-repository = "https://github.com/seed-rs/seed-quickstart"
-authors = ["{{authors}}"]
-description = "App Description"
-categories = ["category"]
+name = "chess_rs"
+authors = ["Samuele"]
+description = "a website to play chess online against an AI"
 license = "MIT"
 readme = "./README.md"
 edition = "2018"
